--- a/front/package.json
+++ b/front/package.json
@@ -16,6 +16,7 @@
     "lucide-react": "^0.462.0",
     "mysql2": "^3.11.5",
     "react": "^18.3.1",
+    "react-calendar": "^5.1.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
