--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "cheerio": "^1.0.0",
     "cors": "^2.8.5",
     "express": "^4.21.1",
-    "mysql2": "^3.11.4"
+    "mysql2": "^3.11.4",
+    "react-calendar": "^5.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
