--- a/server/package.json
+++ b/server/package.json
@@ -12,11 +12,12 @@
     "body-parser": "^1.20.3",
     "cheerio": "^1.0.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.1",
     "mysql2": "^3.11.5",
+    "react-calendar": "^5.1.0",
     "sequelize": "^6.37.5"
   },
   "devDependencies": {
